--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,10 @@ body {
 .navbar-section {
   width: 100%;
   display: block;
-  position: relative;
+  position: fixed;
   padding: 15px 10px;
+  background: white;
+  z-index: 9999;
   -webkit-box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
           box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
 }
@@ -172,6 +174,7 @@ body {
           transform: translate(0, -50%);
   border-radius: 50%;
   max-width: 70%;
+  width: 60%;
 }
 
 #about.about-me {
@@ -326,7 +329,7 @@ body {
   transition: 0.5s ease-in-out;
   padding: 60px 20px;
   top: 0;
-  left: -50%;
+  left: -290px;
   -webkit-box-shadow: 6px 0 28px rgba(0, 0, 0, 0.05);
           box-shadow: 6px 0 28px rgba(0, 0, 0, 0.05);
 }
